# FileRouter

./: LICENSE  README.md  pyproject.toml
filerouter/: __init__.py  filerouter.py  logconf.py  tools.py
test/: config.py  router.py  server.py  test_server.py
